--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
         </div>
         <div class = "function-img">
-          <img src = "img/プロジェクト　プレゼンテーション.jpg" alt = "機能イラスト">
+          <img src = "img/function.jpg" alt = "機能イラスト">
         </div>
       </div>
 
       <div class = "function-item reverse">
         <div class = "function-img">
-          <img src = "img/プロジェクト　プレゼンテーション.jpg" alt = "機能イラスト">
+          <img src = "img/function.jpg" alt = "機能イラスト">
         </div>
         <div class = "function-desc">
           <h4 class = "function-text">テキストテキスト2</h4>
@@ -135,13 +135,13 @@
           <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
         </div>
         <div class = "function-img">
-          <img src = "img/プロジェクト　プレゼンテーション.jpg" alt = "機能イラスト">
+          <img src = "img/function.jpg" alt = "機能イラスト">
         </div>
       </div>
 
       <div class = "function-item reverse">
         <div class = "function-img">
-          <img src = "img/プロジェクト　プレゼンテーション.jpg" alt = "機能イラスト">
+          <img src = "img/function.jpg" alt = "機能イラスト">
         </div>
         <div class = "function-desc">
           <h4 class = "function-text">テキストテキスト4</h4>
@@ -154,23 +154,23 @@
       <h3 class = "sec-title">テキストテキスト</h3>
       <div class = "grid">
         <div class = "grid-item">
-          <img src = "img/分析.png" alt = "分析イラスト">
+          <img src = "img/analysis.png" alt = "分析イラスト">
           <p>テキストテキスト</p>
         </div>
         <div class = "grid-item">
-          <img src = "img/分析.png" alt = "分析イラスト">
+          <img src = "img/analysis.png" alt = "分析イラスト">
           <p>テキストテキスト</p>
         </div>
         <div class = "grid-item">
-          <img src = "img/分析.png" alt = "分析イラスト">
+          <img src = "img/analysis.png" alt = "分析イラスト">
           <p>テキストテキスト</p>
         </div>
         <div class = "grid-item">
-          <img src = "img/分析.png" alt = "分析イラスト">
+          <img src = "img/analysis.png" alt = "分析イラスト">
           <p>テキストテキスト</p>
         </div>
         <div class = "grid-item big-grid">
-          <img src = "img/分析.png" alt = "分析イラスト">
+          <img src = "img/analysis.png" alt = "分析イラスト">
           <p>テキストテキスト</p>
         </div>
       </div>  
