--- a/index.html
+++ b/index.html
@@ -1,297 +1,210 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="経営者のストレスを軽減してくれるElephant appのご紹介サイトです。" />
-  <title>Elephant app</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel = "stylesheet" href = "https://unpkg.com/ress/dist/ress.min.css">
-<link rel = "stylesheet" href = "css/responsive(max-width600).css">
-  <link rel = "stylesheet" href = "css/style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>AAA英会話スクール</title>
+    <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/aaa-favicon.png">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="css/style.css">
+   
+  </head>
 
-<body>
-  <header>
-    <h1 class = "logo">
-      <picture>
-        <source media = "(max-width:600px)" srcset = "img/logo-sp.png">
-        <img src ="img/elephant-logo.png" alt = "ロゴ画像">
-      </picture>
-    </h1>
+  <body>
+    <header id="header">
+      <h1 class="site-title">
+        <a href="#"><img src="img/logo-r.png" alt="AAA英会話スクール"></a>
+      </h1>
 
-    <div class = "btns">
-      <a href = "#">
-        <button class="b-btn">無料で始める</button>
-      </a>
-      <a href = "#">
-        <button class="w-btn">お問い合わせ</button>
-      </a>
-    </div>
-  </header>
-
-  <section id = "mainvisual">
-    <div class = "mainvisual-text">
-      <h2 class = "site-title">
-        EPTappは<br>模写（練習）サイトです。
-      </h2>
-      <p>
-        EPTは経営者を悩ます諸問題をスピーディーに片付けることができるツールです。
-      </p>
-      <div class = "btns">
-        <a href = "#">
-          <button class="b-btn">無料で始める</button>
-        </a>
-        <a href = "#">
-          <button class="w-btn">お問い合わせ</button>
-        </a>
-      </div>
-
-      <p class = "attn">※テキストテキストテキストテキストテキスト。</p>
-    </div>
-
-    <div class = "mainvisual-img">
-      <img src = "img/mainvisual.png" alt = "メイン画像">
-    </div>
-  </section>
-
-  <section class = "switch-page">
-   <img src = "img/switch-page.jpg" alt = "ページ切り替え">
-  </section>
-
-  <section id = "about" class = "wrapper">
-    <h3 class = "sec-title">タイトルタイトルタイトル</h3>
-    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-
-    <div class = "about-container">
-      <div class = "flex-item">
-        <div class = "about-img">
-        <img src = "img/pc2.jpg" alt="pcイラスト">
-        </div>
-        <h4 class = "item-title">テキストテキスト1</h4>
-        <p class = "item-desc">テキストテキストテキストテキストテキストテキスト</p>   
-      </div>
-      <div class = "flex-item">
-        <div class = "about-img">
-        <img src = "img/pc2.jpg" alt="pcイラスト">
-        </div>
-        <h4 class = "item-title">テキストテキスト2</h4>
-        <p class = "item-desc">テキストテキストテキストテキストテキストテキスト</p>   
-      </div>
-      <div class = "flex-item">
-        <div class = "about-img">
-        <img src = "img/pc2.jpg" alt="pcイラスト">
-        </div>
-        <h4 class = "item-title">テキストテキスト3</h4>
-        <p class = "item-desc">テキストテキストテキストテキストテキストテキスト</p>   
-      </div>
-    </div>
-
-    <div class = "about-more wrapper">
-      <h3 class = "sec-title">Eptappとは</h3>
-      <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-      <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-    </div>
-    <div><a href = "#">
-      <button class = "b-btn">無料で始める</button>
-    </a></div>
-  </section>
-
-  <section class = "switch-page">
-    <img src = "img/switch-page.jpg" alt = "ページ切り替え">
-  </section>
-
-   <section id = "function" class = "wrapper">
-    <h3 class = "sec-title">テキストテキスト</h3>
-  
-    <div class = "function-container">
-      <div class = "function-item">
-        <div class = "function-desc">
-          <h4 class = "function-text">テキストテキスト1</h4>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        </div>
-        <div class = "function-img">
-          <img src = "img/function.jpg" alt = "機能イラスト">
-        </div>
-      </div>
-
-      <div class = "function-item reverse">
-        <div class = "function-img">
-          <img src = "img/function.jpg" alt = "機能イラスト">
-        </div>
-        <div class = "function-desc">
-          <h4 class = "function-text">テキストテキスト2</h4>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        </div>        
-      </div>
-
-      <div class = "function-item">
-        <div class = "function-desc">
-          <h4 class = "function-text">テキストテキスト3</h4>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        </div>
-        <div class = "function-img">
-          <img src = "img/function.jpg" alt = "機能イラスト">
-        </div>
-      </div>
-
-      <div class = "function-item reverse">
-        <div class = "function-img">
-          <img src = "img/function.jpg" alt = "機能イラスト">
-        </div>
-        <div class = "function-desc">
-          <h4 class = "function-text">テキストテキスト4</h4>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        </div>        
-      </div>
-    </div>
-
-    <div class = "other-function">
-      <h3 class = "sec-title">テキストテキスト</h3>
-      <div class = "grid">
-        <div class = "grid-item">
-          <img src = "img/analysis.png" alt = "分析イラスト">
-          <p>テキストテキスト</p>
-        </div>
-        <div class = "grid-item">
-          <img src = "img/analysis.png" alt = "分析イラスト">
-          <p>テキストテキスト</p>
-        </div>
-        <div class = "grid-item">
-          <img src = "img/analysis.png" alt = "分析イラスト">
-          <p>テキストテキスト</p>
-        </div>
-        <div class = "grid-item">
-          <img src = "img/analysis.png" alt = "分析イラスト">
-          <p>テキストテキスト</p>
-        </div>
-        <div class = "grid-item big-grid">
-          <img src = "img/analysis.png" alt = "分析イラスト">
-          <p>テキストテキスト</p>
-        </div>
-      </div>  
-    </div>
-  </section>
-
-    <section class = "switch-page">
-      <img src = "img/switch-page.jpg" alt = "ページ切り替え">
-     </section>
-
-     <section id = "steps" class = "wrapper">
-      <div class = "steps-container">
-        <ul>
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool1.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP1</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool2.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP2</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool3.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP3</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool4.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP4</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool5.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP5</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool6.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP6</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
-
-          <li>
-            <div class = "steps-image">
-              <img src = "img/ept-tool7.png" alt = "スライド画像">
-            </div>
-            <div class = "steps-text">
-              <h3 class = "sec-title">
-                <span>STEP7</span>テキストテキスト
-              </h3>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            </div>
-          </li>
+      <nav id="navi">
+        <img class="logo" src="img/logo-w.png" alt="BBB英会話スクール">
+        <ul class="menu">
+          <li><a href="#reason">AAAが選ばれる理由</a></li>
+          <li><a href="#voice">受講生の声</a></li>
+          <li><a href="#summary">スクールの概要</a></li>
         </ul>
-        <button id = "prev">&lt;</button>
-        <button id = "next">&gt;</button>
+        <a class="btn" href="#">無料体験に申し込む</a>
+      </nav>
+
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-     </section>
+    </header>
 
-     <section id = "cta">
-      <h3 class = "sec-title">
-        テキストテキストテキスト
-      </h3>
-      <div class = "btns wrapper">
-        <a href = "#">
-          <button class="b-btn">無料で始める</button>
-        </a>
-        <a href = "#">
-          <button class="w-btn">お問い合わせ</button>
-        </a>
+    <main>
+      <!-- メインビジュアル -->
+      <div id="mainvisual">
+        <div class="text">
+          <p class="title">話して学ぼう！<br>AAA英会話スクール</p>
+          <a class="btn" href="#">無料体験はこちら</a>
+        </div>
+        <ul class="fade">
+          <li><img src="img/mainvisual1.jpg" alt=""></li>
+          <li><img src="img/mainvisual2.jpg" alt=""></li>
+          <li><img src="img/mainvisual3.jpg" alt=""></li>
+        </ul>
       </div>
-     </section>
 
-     <footer>
-      <p class = "copyright">
-        &copy;2022Elephant
-      </p>
-     </footer>
+      <!-- AAAが選ばれる理由 -->
+      <section id="reason">
+        <h2 class="section-title">AAAが選ばれる理由</h2>
 
-     <script src="js/main.js"></script>
-</body>
+        <div class="bg">
+          <div class="slide inview-slide-left">
+            <img src="img/icon-pc.png" alt="選ばれる理由1">
+            <p>
+              <span class="title">オンライン対応</span>
+              <span class="text">24時間いつでも受講できる！</span>
+            </p>
+          </div>
+          <div class="slide inview-slide-right">
+            <img src="img/icon-teacher.png" alt="選ばれる理由2">
+            <p>
+              <span class="title">講師はネイティブ</span>
+              <span class="text">お気に入りの講師が自由に選べる！</span>
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- 受講生の声 -->
+      <section id="voice" class="wrapper">
+        <h2 class="section-title">受講生の声</h2>
+
+        <div class="item-left inview-balloon">
+          <div class="student">
+            <img src="img/icon-student1.png" alt="受講生の声">
+            <p class="name">○○○さん<br>大学生</p>
+          </div>
+          <div class="balloon-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </div>
+
+        <div class="item-right inview-balloon">
+          <div class="balloon-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="student">
+            <img src="img/icon-student2.png" alt="受講生の声">
+            <p class="name">○○○さん<br>会社員</p>
+          </div>
+        </div>
+
+        <div class="item-left inview-balloon">
+          <div class="student">
+            <img src="img/icon-student3.png" alt="受講生の声">
+            <p class="name">○○○さん<br>自営業</p>
+          </div>
+          <div class="balloon-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- スクールの概要 -->
+      <section id="summary">
+        <div class="wrapper">
+          <h2 class="section-title">スクールの概要</h2>
+
+          <ul class="menu">
+            <li>
+              <h3 class="menu-title">
+                <span class="ja">レッスン内容</span>
+                <span class="en">LESSON</span>
+              </h3>
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </li>
+            <li>
+              <h3 class="menu-title">
+                <span class="ja">料金プラン</span>
+                <span class="en">PRICE</span>
+              </h3>
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </li>
+            <li>
+              <h3 class="menu-title">
+                <span class="ja">講師のご紹介</span>
+                <span class="en">TEACHER</span>
+              </h3>
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </li>
+            <li>
+              <h3 class="menu-title">
+                <span class="ja">AAAのQ&A</span>
+                <span class="en">Q&A</span>
+              </h3>
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- 無料体験申し込み -->
+      <div id="entry" class="wrapper">
+        <p class="title">まずは無料で、BBBの英会話を試してみませんか？</p>
+        <p class="catchphrase">今なら初月のレッスンを特別価格で受講できる割引クーポンをプレゼント！</p>
+        <a class="btn" href="#">無料体験に申し込む</a>
+      </div>
+    </main>
+
+    <footer id="footer">
+      <ul class="inner wrapper">
+        <li>
+          <p class="title">コース一覧</p>
+          <ul class="menu">
+            <li><a href="#">スタンダードプラン</a></li>
+            <li><a href="#">プレミアムプラン</a></li>
+            <li><a href="#">短期集中プラン</a></li>
+            <li><a href="#">日常英会話コース</a></li>
+            <li><a href="#">ビジネス英会話コース</a></li>
+          </ul>
+        </li>
+        <li>
+          <p class="title">講師紹介</p>
+          <ul class="menu">
+            <li><a href="#">講師について</a></li>
+            <li><a href="#">講師一覧</a></li>
+            <li><a href="#">講師を探す</a></li>
+          </ul>
+        </li>
+        <li>
+          <p class="title">会社情報</p>
+          <ul class="menu">
+            <li><a href="#">会社概要</a></li>
+            <li><a href="#">採用情報</a></li>
+          </ul>
+        </li>
+        <li>
+          <p class="title">AAAについて</p>
+          <ul class="menu">
+            <li><a href="#">よくあるご質問</a></li>
+            <li><a href="#">ご利用規約</a></li>
+            <li><a href="#">プライバシーポリシー</a></li>
+            <li><a href="#">お問い合わせ</a></li>
+          </ul>
+        </li>
+      </ul>
+      <p class="copyright">&copy; AAA English School</p>
+    </footer>
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/jquery.inview.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html>
